node/src/app.scss
/* ... */
.hous4-16-18-loading-blocker {
  position:fixed;
  top:0;
  left:0;
  right:0;
  bottom:0;
  text-align:center;
  background-color: rgba(255, 255, 255, 0.6);
  padding-top:calc(50vh - 100px);
  mix-blend-mode:multiply;
  img {
    display:inline;
  }
}

